@@ -2,7 +2,7 @@ version 1.1-rc0 ..-..-2012
 . [NEW] v2.0 forward ported changes:
             CCParticleSystem: fix for correctly fading out particles with premultiplied and non premultiplied textures and avoiding black halo's
 . [NEW] Macros: made CCLOG a bit more verbose
-. [NEW] CCActionInterval: CCFadeIn and CCFadeOut respect initial opacity of node(issue 828) 
+. [NEW] CCActionInterval: CCFadeIn and CCFadeOut respect initial opacity of node(issue #828) 
 . [NEW] CCNode: added convenience method setAnchorPointWithoutPositionChange, to change a relative anchor point but not change the position of the node.
 . [NEW] CCSprite: added useTrimmedFrameForAnchorPoint property. This makes the trimmed frame frame of reference for the anchorpoint and contentSize.
 . [NEW] DrawPrimitives: added inPixels versions of each function. 
@@ -21,6 +21,7 @@ version 1.1-rc0 ..-..-2012
 . [FIX] CCTouchDispatcher: fixed crash after showing UIAlertView (issue #1279)
 . [FIX] CCGrabber: added log message to warn that grabber doesn't support transparent parts with a color buffer of RGB565
 . [FIX] Compiler: fixed unrecognised clang pragmas so cocos can still be compiled with LLVM version < 2.0. 
+. [FIX] Tests: MenuTest moved actions from init to onEnter (issue #884)
 . [FIX-MAC] CCDirectorMac: convertToLogicalCoordinates compensates for viewport offset when a custom projection is set 
 
 version 1.1-beta2b 14-Mar-2012
